Added output back

--- a/docs/tutorials/basic/Tutorial II Loop Constructs.ipynb
+++ b/docs/tutorials/basic/Tutorial II Loop Constructs.ipynb
@@ -36,7 +36,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: typer 0.12.3 does not provide the extra 'all'\n",
+      "WARNING: typer 0.12.3 does not provide the extra 'all'\n",
+      "WARNING: typer 0.12.3 does not provide the extra 'all'\n"
+     ]
+    }
+   ],
    "source": [
     "#### Installation ####\n",
     "!pip install -q \"autora[experimentalist-falsification]\"\n",
@@ -114,7 +124,108 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:autora.theorist.bms.regressor:BMS fitting started\n",
+      "100%|██████████| 100/100 [00:04<00:00, 21.43it/s]\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.        ]\n",
+      " [0.06346652]\n",
+      " [0.12693304]]\n",
+      "Loss in cycle 0: 0.99\n",
+      "Discovered Model: sin(X0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:04<00:00, 22.62it/s]\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.        ]\n",
+      " [0.44426563]\n",
+      " [0.38079911]]\n",
+      "Loss in cycle 1: 0.99\n",
+      "Discovered Model: sin(X0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:04<00:00, 20.91it/s]\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.        ]\n",
+      " [0.57119866]\n",
+      " [0.63466518]]\n",
+      "Loss in cycle 2: 0.99\n",
+      "Discovered Model: sin(X0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:04<00:00, 20.60it/s]\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.        ]\n",
+      " [6.28318531]\n",
+      " [6.21971879]]\n",
+      "Loss in cycle 3: 0.99\n",
+      "Discovered Model: sin(X0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:04<00:00, 22.85it/s]\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6.28318531]\n",
+      " [6.21971879]\n",
+      " [6.15625227]]\n",
+      "Loss in cycle 4: 0.99\n",
+      "Discovered Model: sin(X0)\n"
+     ]
+    }
+   ],
    "source": [
     "num_cycles = 5 # number of empirical research cycles\n",
     "measurements_per_cycle = 3 # number of data points to collect for each cycle\n",
@@ -173,7 +284,113 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:autora.theorist.bms.regressor:BMS fitting started\n",
+      "100%|██████████| 100/100 [00:04<00:00, 21.66it/s]\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          0\n",
+      "0  0.000000\n",
+      "1  0.063467\n",
+      "2  0.126933\n",
+      "Loss in cycle 0: 0.5027103676355225\n",
+      "Discovered BMS Model: -0.09\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:04<00:00, 21.51it/s]\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           0\n",
+      "26  1.650129\n",
+      "25  1.586663\n",
+      "27  1.713596\n",
+      "Loss in cycle 1: 0.99\n",
+      "Discovered BMS Model: sin(X0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:04<00:00, 21.92it/s]\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           0\n",
+      "73  4.633056\n",
+      "74  4.696522\n",
+      "72  4.569589\n",
+      "Loss in cycle 2: 0.99\n",
+      "Discovered BMS Model: sin(X0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:04<00:00, 21.94it/s]\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting started\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           0\n",
+      "28  1.777063\n",
+      "27  1.713596\n",
+      "29  1.840529\n",
+      "Loss in cycle 3: 0.99\n",
+      "Discovered BMS Model: sin(X0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:04<00:00, 24.37it/s]\n",
+      "INFO:autora.theorist.bms.regressor:BMS fitting finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           0\n",
+      "71  4.506123\n",
+      "72  4.569589\n",
+      "70  4.442656\n",
+      "Loss in cycle 4: 0.99\n",
+      "Discovered BMS Model: sin(X0)\n"
+     ]
+    }
+   ],
    "source": [
     "num_cycles = 5 # number of empirical research cycles\n",
     "measurements_per_cycle = 3 # number of data points to collect for each cycle\n",
