--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -89,4 +89,12 @@ url={https://openreview.net/forum?id=m5Qsh0kBQG}
     booktitle = {NeurIPS 2023 AI for Science Workshop},
 }
 
+@article{musslick2024,
+    author =	 {Musslick, S. and Strittmatter, Y. and Dubova, M.},
+  title =	 {Closed-Loop Scientific Discovery in the Behavioral Sciences},
+  year =	 {2024},
+  publisher={PsyArXiv},
+  doi = {https://doi.org/10.31234/osf.io/c2ytb},
+}
+
 
