--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -71,7 +71,7 @@ url={https://openreview.net/forum?id=m5Qsh0kBQG}
 }
 
 @article{guimera_bayesian_2020,
-	title = {A {Bayesian} machine scientist to aid in the solution of challenging scientific problems},
+	title = {A {Bayesian} Machine Scientist to Aid in the Solution of Challenging Scientific Problems},
 	volume = {6},
 	issn = {2375-2548},
 	number = {5},
