unified captialization of reference titles

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,5 +1,5 @@
 @inproceedings{hewson_bayesian_2023,
-	title = {Bayesian {Machine} {Scientist} for {Model} {Discovery} in {Psychology}},
+	title = {Bayesian machine scientist for model discovery in psychology},
 	author = {Hewson, Joshua and Strittmatter, Younes and Marinescu, Ioana and Williams, Chad and Musslick, Sebastian},
 	year = {2023},
         booktitle = {NeurIPS 2023 AI for Science Workshop},
@@ -34,7 +34,7 @@
 }
 
 @article{pedregosa2011scikit,
-  title={Scikit-learn: Machine learning in Python},
+  title={Scikit-learn: Machine learning in python},
   author={Pedregosa, Fabian and Varoquaux, Ga{\"e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and others},
   journal={Journal of Machine Learning Research},
   volume={12},
@@ -71,7 +71,7 @@ url={https://openreview.net/forum?id=m5Qsh0kBQG}
 }
 
 @article{guimera_bayesian_2020,
-	title = {A {Bayesian} Machine Scientist to Aid in the Solution of Challenging Scientific Problems},
+	title = {A {Bayesian} machine scientist to aid in the solution of challenging scientific problems},
 	volume = {6},
 	issn = {2375-2548},
 	number = {5},
@@ -82,16 +82,9 @@ url={https://openreview.net/forum?id=m5Qsh0kBQG}
 	pages = {eaav6971},
 }
 
-@inproceedings{hewson_bayesian_2023,
-	title = {Bayesian Machine Scientist for Model Discovery in Psychology},
-	author = {Hewson, Joshua and Strittmatter, Younes and Marinescu, Ioana and Williams, Chad and Musslick, Sebastian},
-	year = {2023},
-    booktitle = {NeurIPS 2023 AI for Science Workshop},
-}
-
 @article{musslick2024,
     author =	 {Musslick, S. and Strittmatter, Y. and Dubova, M.},
-  title =	 {Closed-Loop Scientific Discovery in the Behavioral Sciences},
+  title =	 {Closed-loop scientific discovery in the behavioral sciences},
   year =	 {2024},
   publisher={PsyArXiv},
   doi = {https://doi.org/10.31234/osf.io/c2ytb},
