wrote out names

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -83,7 +83,7 @@ url={https://openreview.net/forum?id=m5Qsh0kBQG}
 }
 
 @article{musslick2024,
-    author =	 {Musslick, S. and Strittmatter, Y. and Dubova, M.},
+    author =	 {Musslick, Sebastian and Strittmatter, Younes and Dubova, Marina},
   title =	 {Closed-loop scientific discovery in the behavioral sciences},
   year =	 {2024},
   publisher={PsyArXiv},
