--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -2,7 +2,8 @@
 	title = {Bayesian machine scientist for model discovery in psychology},
 	author = {Hewson, Joshua and Strittmatter, Younes and Marinescu, Ioana and Williams, Chad and Musslick, Sebastian},
 	year = {2023},
-        booktitle = {NeurIPS 2023 AI for Science Workshop},
+    booktitle = {NeurIPS 2023 AI for Science Workshop},
+    url={https://openreview.net/forum?id=XHFfvzlQ1n}
 }
 
 @inproceedings{musslick_evaluation_2023,
@@ -20,6 +21,7 @@
 	journal = {MetaArXiv. June},
 	author = {Dubova, Marina and Moskvichev, Arseny and Zollman, Kevin},
 	year = {2022},
+	doi = {10.31222/osf.io/ysv2u},
 }
 
 @article{palan_prolific_2018,
@@ -31,6 +33,7 @@
 	year = {2018},
 	note = {Publisher: Elsevier},
 	pages = {22--27},
+	doi = {10.1016/j.jbef.2017.12.004},
 }
 
 @article{pedregosa2011scikit,
@@ -49,17 +52,23 @@ title={Deep symbolic regression: Recovering mathematical expressions from data v
 author={Brenden K Petersen and Mikel Landajuela Larma and Terrell N. Mundhenk and Claudio Prata Santiago and Soo Kyung Kim and Joanne Taery Kim},
 booktitle={International Conference on Learning Representations},
 year={2021},
-url={https://openreview.net/forum?id=m5Qsh0kBQG}
+url={https://openreview.net/forum?id=m5Qsh0kBQG},
+doi={10.48550/arXiv.1912.04871}
 }
 
-@article{landajuela_unified_2022,
-	title = {A unified framework for deep symbolic regression},
-	volume = {35},
-	journal = {Advances in Neural Information Processing Systems},
-	author = {Landajuela, Mikel and Lee, Chak Shing and Yang, Jiachen and Glatt, Ruben and Santiago, Claudio P and Aravena, Ignacio and Mundhenk, Terrell and Mulcahy, Garrett and Petersen, Brenden K},
-	year = {2022},
-	pages = {33985--33998},
+
+@inproceedings{landajuela_unified_2022,
+ author = {Landajuela, Mikel and Lee, Chak Shing and Yang, Jiachen and Glatt, Ruben and Santiago, Claudio P and Aravena, Ignacio and Mundhenk, Terrell and Mulcahy, Garrett and Petersen, Brenden K},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {S. Koyejo and S. Mohamed and A. Agarwal and D. Belgrave and K. Cho and A. Oh},
+ pages = {33985--33998},
+ publisher = {Curran Associates, Inc.},
+ title = {A Unified Framework for Deep Symbolic Regression},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2022/file/dbca58f35bddc6e4003b2dd80e42f838-Paper-Conference.pdf},
+ volume = {35},
+ year = {2022}
 }
+
 
 @article{cranmer_discovering_2020,
 	title = {Discovering symbolic models from deep learning with inductive biases},
@@ -68,6 +77,7 @@ url={https://openreview.net/forum?id=m5Qsh0kBQG}
 	author = {Cranmer, Miles and Sanchez Gonzalez, Alvaro and Battaglia, Peter and Xu, Rui and Cranmer, Kyle and Spergel, David and Ho, Shirley},
 	year = {2020},
 	pages = {17429--17442},
+	doi = {10.48550/arXiv.2006.11287},
 }
 
 @article{guimera_bayesian_2020,
@@ -80,6 +90,7 @@ url={https://openreview.net/forum?id=m5Qsh0kBQG}
 	year = {2020},
 	note = {Publisher: American Association for the Advancement of Science},
 	pages = {eaav6971},
+	doi = {10.1126/sciadv.aav6971},
 }
 
 @article{musslick2024,
@@ -87,7 +98,7 @@ url={https://openreview.net/forum?id=m5Qsh0kBQG}
   title =	 {Closed-loop scientific discovery in the behavioral sciences},
   year =	 {2024},
   publisher={PsyArXiv},
-  doi = {https://doi.org/10.31234/osf.io/c2ytb},
+  doi = {10.31234/osf.io/c2ytb},
 }
 
 
