fixed import statement for falsification sampler

--- a/docs/tutorials/Experimentalist.ipynb
+++ b/docs/tutorials/Experimentalist.ipynb
@@ -43,7 +43,7 @@
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from autora.variable import DV, IV, ValueType, VariableCollection\n",
-    "from autora.experimentalist.sampler.falsification import falsification_sample, falsification_score_sample"
+    "from autora.experimentalist.falsification import falsification_sample, falsification_score_sample"
    ]
   },
   {
