updated closed-loop doc

--- a/docs/examples/closed-loop-basic/notebooks/sweetpea.ipynb
+++ b/docs/examples/closed-loop-basic/notebooks/sweetpea.ipynb
@@ -216,24 +216,24 @@
    "source": [
     "from sweetpea import Factor, MinimumTrials, CrossBlock, synthesize_trials, CMSGen, experiments_to_dicts\n",
     "\n",
-    "def trial_sequence(num_dots_1, num_dots_2, n_trials):\n",
+    "def trial_sequence(num_dots_1, num_dots_2, min_trials):\n",
     "\n",
     "  # define regular factors\n",
-    "  num_dots_left = Factor('Number of Dots in Left Stimulus', [40, 70])\n",
-    "  num_dots_right = Factor('Number of Dots in Right Stimulus', [70, 40])\n",
+    "  num_dots_left = Factor('dots left', [num_dots_1, num_dots_2])\n",
+    "  num_dots_right = Factor('dots right', [num_dots_1, num_dots_2])\n",
     "\n",
     "  # define experimental block\n",
     "  design = [num_dots_left, num_dots_right]\n",
     "  crossing = [num_dots_left, num_dots_right]\n",
-    "  constraints = [MinimumTrials(nr_trials)]\n",
+    "  constraints = [MinimumTrials(min_trials)]\n",
     "\n",
     "  block = CrossBlock(design, crossing, constraints)\n",
     "\n",
     "  # synthesize trialsequence\n",
     "  experiment = synthesize_trials(block, 1, CMSGen)\n",
     "\n",
-    "  # export as dict:\n",
-    "  return experiments_to_dicts(block, experiment)"
+    "  # export as dictionary\n",
+    "  return experiments_to_dicts(block, experiment)[0]"
    ]
   }
  ],
