updated notebooks and sweetbean import statement

--- a/docs/examples/closed-loop-basic/notebooks/sweetbean.ipynb
+++ b/docs/examples/closed-loop-basic/notebooks/sweetbean.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install sweetbean"
+    "!pip install git+https://github.com/AutoResearch/sweetbean"
    ]
   },
   {
@@ -46,16 +46,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "timeline = [{'dots left': 40, 'dots right': 70},\n",
-    "  {'dots left': 70, 'dots right': 70},\n",
-    "  {'dots left': 70, 'dots right': 40},\n",
-    "  {'dots left': 70, 'dots right': 70},\n",
-    "  {'dots left': 40, 'dots right': 70},\n",
-    "  {'dots left': 70, 'dots right': 40},\n",
-    "  {'dots left': 40, 'dots right': 40},\n",
-    "  {'dots left': 40, 'dots right': 40},\n",
-    "  {'dots left': 40, 'dots right': 40},\n",
-    "  {'dots left': 70, 'dots right': 40}]"
+    "timeline = [{'dots_left': 40, 'dots_right': 70},\n",
+    "  {'dots_left': 70, 'dots_right': 70},\n",
+    "  {'dots_left': 70, 'dots_right': 40},\n",
+    "  {'dots_left': 70, 'dots_right': 70},\n",
+    "  {'dots_left': 40, 'dots_right': 70},\n",
+    "  {'dots_left': 70, 'dots_right': 40},\n",
+    "  {'dots_left': 40, 'dots_right': 40},\n",
+    "  {'dots_left': 40, 'dots_right': 40},\n",
+    "  {'dots_left': 40, 'dots_right': 40},\n",
+    "  {'dots_left': 70, 'dots_right': 40}]"
    ]
   },
   {
@@ -205,8 +205,8 @@
     "from sweetbean.stimulus import RandomDotPatternsStimulus\n",
     "\n",
     "# define the stimuli features as timeline variables\n",
-    "dot_stimulus_left = TimelineVariable('dots left', [40, 70])\n",
-    "dot_stimulus_right = TimelineVariable('dots right', [40, 70])\n",
+    "dot_stimulus_left = TimelineVariable('dots_left', [40, 70])\n",
+    "dot_stimulus_right = TimelineVariable('dots_right', [40, 70])\n",
     "\n",
     "# We can use these variables in the stimuli declaration:\n",
     "rdp = RandomDotPatternsStimulus(\n",
@@ -355,8 +355,8 @@
     "  fixation = FixationStimulus(1500)\n",
     "\n",
     "  # define the stimuli features as timeline variables\n",
-    "  dot_stimulus_left = TimelineVariable('dots left', [num_dots_1, num_dots_2])\n",
-    "  dot_stimulus_right = TimelineVariable('dots right', [num_dots_1, num_dots_2])\n",
+    "  dot_stimulus_left = TimelineVariable('dots_left', [num_dots_1, num_dots_2])\n",
+    "  dot_stimulus_right = TimelineVariable('dots_right', [num_dots_1, num_dots_2])\n",
     "\n",
     "  # We can define a stimulus as a function of those stimulus features\n",
     "  rdp = RandomDotPatternsStimulus(\n",
