--- a/docs/examples/closed-loop-basic/notebooks/sweetpea.ipynb
+++ b/docs/examples/closed-loop-basic/notebooks/sweetpea.ipynb
@@ -52,11 +52,11 @@
     "# the first experimental factor indicates the number of dots in the\n",
     "# left stimulus. It has two levels, i.e., two possible values for the\n",
     "# number of dots, either 40 and or 70 dots.\n",
-    "num_dots_left = Factor('dots left', [40, 70])\n",
+    "num_dots_left = Factor('dots_left', [40, 70])\n",
     "\n",
     "# the second experimental factor indicates the number of dots in the\n",
     "# right stimulus. It also has two levels: 40 and 70 dots.\n",
-    "num_dots_right = Factor('dots right', [70, 40])"
+    "num_dots_right = Factor('dots_right', [70, 40])"
    ]
   },
   {
@@ -219,8 +219,8 @@
     "def trial_sequence(num_dots_1, num_dots_2, min_trials):\n",
     "\n",
     "  # define regular factors\n",
-    "  num_dots_left = Factor('dots left', [num_dots_1, num_dots_2])\n",
-    "  num_dots_right = Factor('dots right', [num_dots_1, num_dots_2])\n",
+    "  num_dots_left = Factor('dots_left', [num_dots_1, num_dots_2])\n",
+    "  num_dots_right = Factor('dots_right', [num_dots_1, num_dots_2])\n",
     "\n",
     "  # define experimental block\n",
     "  design = [num_dots_left, num_dots_right]\n",
