fixed background color

--- a/docs/examples/closed-loop-basic/notebooks/sweetbean.ipynb
+++ b/docs/examples/closed-loop-basic/notebooks/sweetbean.ipynb
@@ -214,6 +214,7 @@
     "    number_of_oobs=[dot_stimulus_left, dot_stimulus_right],\n",
     "    number_of_apertures=2,\n",
     "    choices=[\"y\", \"n\"],\n",
+    "    background_color=\"black\",\n",
     ")"
    ]
   },
@@ -364,6 +365,7 @@
     "      number_of_oobs=[dot_stimulus_left, dot_stimulus_right],\n",
     "      number_of_apertures=2,\n",
     "      choices=[\"y\", \"n\"],\n",
+    "      background_color=\"black\",\n",
     "  )\n",
     "\n",
     "  # define the sequence of events within a trial\n",
