--- a/docs/tutorials/basic/Tutorial Ib Experimentalists.ipynb
+++ b/docs/tutorials/basic/Tutorial Ib Experimentalists.ipynb
@@ -9,7 +9,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# # Basic Tutorial Ib: Experimentalists\n",
+    "# Basic Tutorial Ib: Experimentalists\n",
     "\n",
     "[Experimentalists](../../experimentalist/) are functions designed to return novel experimental conditions that yield scientific merit.\n",
     "\n",
