--- a/docs/examples/closed-loop-basic/notebooks/sweetpea.ipynb
+++ b/docs/examples/closed-loop-basic/notebooks/sweetpea.ipynb
@@ -189,7 +189,7 @@
     }
    ],
    "source": [
-    "# we can export the experimentla sequence as a dictionary\n",
+    "# we can export the experimental sequence as a dictionary\n",
     "sequence = experiments_to_dicts(block, experiment)\n",
     "print(sequence)"
    ]
@@ -229,7 +229,7 @@
     "\n",
     "  block = CrossBlock(design, crossing, constraints)\n",
     "\n",
-    "  # synthesize trialsequence\n",
+    "  # synthesize trial sequence\n",
     "  experiment = synthesize_trials(block, 1, CMSGen)\n",
     "\n",
     "  # export as dictionary\n",
