--- a/docs/tutorials/basic/Tutorial I Components.ipynb
+++ b/docs/tutorials/basic/Tutorial I Components.ipynb
@@ -1138,7 +1138,7 @@
     "new_conditions = random_pool(variables=variables,\n",
     "                             num_samples=num_samples)\n",
     "\n",
-    "# print conditons\n",
+    "# print conditions\n",
     "for idx, condition in enumerate(new_conditions.values):\n",
     "    print(condition)"
    ]
