remove output from notebooks

--- a/docs/examples/closed-loop-basic/notebooks/sweetbean.ipynb
+++ b/docs/examples/closed-loop-basic/notebooks/sweetbean.ipynb
@@ -221,7 +221,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "Note that the dot stimulus is shown for 2000ms (``duration=2000``). It consists of two set of dots (``number_of_apertures=2``), which are parameterized by the two timeline variables ``number_of_oobs=[dot_stimulus_left, dot_stimulus_right]``. Finally, we allow participants to record a response on each stimulus, indicating whether the dots match or not by pressing the respective keys for `y` and `n` (``choices=[\"y\", \"n\"]``)"
+   "source": [
+    "Note that the dot stimulus is shown for 2000ms (``duration=2000``). It consists of two set of dots (``number_of_apertures=2``), which are parameterized by the two timeline variables ``number_of_oobs=[dot_stimulus_left, dot_stimulus_right]``. Finally, we allow participants to record a response on each stimulus, indicating whether the dots match or not by pressing the respective keys for `y` and `n` (``choices=[\"y\", \"n\"]``)"
+   ]
   },
   {
    "cell_type": "markdown",
