--- a/docs/tutorials/basic/Tutorial III Functional Workflow.ipynb
+++ b/docs/tutorials/basic/Tutorial III Functional Workflow.ipynb
@@ -210,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[1mThe variables we provided:\u001B[0m\n",
+      "\u001b[1mThe variables we provided:\u001b[0m\n",
       "VariableCollection(independent_variables=[Variable(name='x', value_range=(0, 6.283185307179586), allowed_values=array([0.        , 0.21666156, 0.43332312, 0.64998469, 0.86664625,\n",
       "       1.08330781, 1.29996937, 1.51663094, 1.7332925 , 1.94995406,\n",
       "       2.16661562, 2.38327719, 2.59993875, 2.81660031, 3.03326187,\n",
@@ -218,7 +218,7 @@
       "       4.33323125, 4.54989281, 4.76655437, 4.98321593, 5.1998775 ,\n",
       "       5.41653906, 5.63320062, 5.84986218, 6.06652374, 6.28318531]), units='', type=<ValueType.REAL: 'real'>, variable_label='', rescale=1, is_covariate=False)], dependent_variables=[Variable(name='y', value_range=None, allowed_values=None, units='', type=<ValueType.REAL: 'real'>, variable_label='', rescale=1, is_covariate=False)], covariates=[])\n",
       "\n",
-      "\u001B[1mThe conditions we provided:\u001B[0m\n",
+      "\u001b[1mThe conditions we provided:\u001b[0m\n",
       "          x\n",
       "0  5.416539\n",
       "1  4.116570\n",
@@ -231,7 +231,7 @@
       "8  1.083308\n",
       "9  5.199877\n",
       "\n",
-      "\u001B[1mThe dataframe we provided:\u001B[0m\n",
+      "\u001b[1mThe dataframe we provided:\u001b[0m\n",
       "Empty DataFrame\n",
       "Columns: [x, y]\n",
       "Index: []\n"
@@ -372,7 +372,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[1mPrevious Conditions:\u001B[0m\n",
+      "\u001b[1mPrevious Conditions:\u001b[0m\n",
       "          x\n",
       "0  5.416539\n",
       "1  4.116570\n",
@@ -385,7 +385,7 @@
       "8  1.083308\n",
       "9  5.199877\n",
       "\n",
-      "\u001B[1mUpdated Conditions:\u001B[0m\n",
+      "\u001b[1mUpdated Conditions:\u001b[0m\n",
       "          x\n",
       "0  0.433323\n",
       "1  4.983216\n",
@@ -428,12 +428,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[1mPrevious Data:\u001B[0m\n",
+      "\u001b[1mPrevious Data:\u001b[0m\n",
       "Empty DataFrame\n",
       "Columns: [x, y]\n",
       "Index: []\n",
       "\n",
-      "\u001B[1mUpdated Data:\u001B[0m\n",
+      "\u001b[1mUpdated Data:\u001b[0m\n",
       "          x         y\n",
       "0  0.433323  0.724606\n",
       "1  4.983216 -2.003534\n",
@@ -486,7 +486,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mUpdated Model:\u001B[0m\n",
+      "\u001b[1mUpdated Model:\u001b[0m\n",
       "-0.38\n"
      ]
     },
@@ -630,8 +630,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 1:\u001B[0m\n",
-      "\u001B[1mCycle 1 model: -0.38\u001B[0m\n"
+      "\u001b[1mRunning Cycle 1:\u001b[0m\n",
+      "\u001b[1mCycle 1 model: -0.38\u001b[0m\n"
      ]
     },
     {
@@ -658,8 +658,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 2:\u001B[0m\n",
-      "\u001B[1mCycle 2 model: -0.27\u001B[0m\n"
+      "\u001b[1mRunning Cycle 2:\u001b[0m\n",
+      "\u001b[1mCycle 2 model: -0.27\u001b[0m\n"
      ]
     },
     {
@@ -686,8 +686,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 3:\u001B[0m\n",
-      "\u001B[1mCycle 3 model: sin(x)\u001B[0m\n"
+      "\u001b[1mRunning Cycle 3:\u001b[0m\n",
+      "\u001b[1mCycle 3 model: sin(x)\u001b[0m\n"
      ]
     },
     {
@@ -757,8 +757,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 1, number of datapoints: 10\u001B[0m\n",
-      "\u001B[1mCycle 1 model: -0.38\u001B[0m\n"
+      "\u001b[1mRunning Cycle 1, number of datapoints: 10\u001b[0m\n",
+      "\u001b[1mCycle 1 model: -0.38\u001b[0m\n"
      ]
     },
     {
@@ -785,8 +785,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 2, number of datapoints: 20\u001B[0m\n",
-      "\u001B[1mCycle 2 model: -0.27\u001B[0m\n"
+      "\u001b[1mRunning Cycle 2, number of datapoints: 20\u001b[0m\n",
+      "\u001b[1mCycle 2 model: -0.27\u001b[0m\n"
      ]
     },
     {
@@ -813,8 +813,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 3, number of datapoints: 30\u001B[0m\n",
-      "\u001B[1mCycle 3 model: -0.07\u001B[0m\n"
+      "\u001b[1mRunning Cycle 3, number of datapoints: 30\u001b[0m\n",
+      "\u001b[1mCycle 3 model: -0.07\u001b[0m\n"
      ]
     },
     {
@@ -841,8 +841,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 4, number of datapoints: 40\u001B[0m\n",
-      "\u001B[1mCycle 4 model: sin(x)\u001B[0m\n"
+      "\u001b[1mRunning Cycle 4, number of datapoints: 40\u001b[0m\n",
+      "\u001b[1mCycle 4 model: sin(x)\u001b[0m\n"
      ]
     },
     {
@@ -860,8 +860,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mNumber of datapoints: 40\u001B[0m\n",
-      "\u001B[1mDetermined Model: sin(x)\u001B[0m\n"
+      "\u001b[1mNumber of datapoints: 40\u001b[0m\n",
+      "\u001b[1mDetermined Model: sin(x)\u001b[0m\n"
      ]
     }
    ],
@@ -968,7 +968,7 @@
      "text": [
       "\n",
       "#==================================================#\n",
-      "\u001B[1mUsing random pooler experimentalist...\u001B[0m\n"
+      "\u001b[1mUsing random pooler experimentalist...\u001b[0m\n"
      ]
     },
     {
@@ -984,8 +984,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 1:\u001B[0m\n",
-      "\u001B[1mCycle 1 model: -0.38\u001B[0m\n"
+      "\u001b[1mRunning Cycle 1:\u001b[0m\n",
+      "\u001b[1mCycle 1 model: -0.38\u001b[0m\n"
      ]
     },
     {
@@ -1011,7 +1011,7 @@
      "text": [
       "\n",
       "#==================================================#\n",
-      "\u001B[1mUsing random pooler experimentalist...\u001B[0m\n"
+      "\u001b[1mUsing random pooler experimentalist...\u001b[0m\n"
      ]
     },
     {
@@ -1027,8 +1027,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 2:\u001B[0m\n",
-      "\u001B[1mCycle 2 model: -0.27\u001B[0m\n"
+      "\u001b[1mRunning Cycle 2:\u001b[0m\n",
+      "\u001b[1mCycle 2 model: -0.27\u001b[0m\n"
      ]
     },
     {
@@ -1054,7 +1054,7 @@
      "text": [
       "\n",
       "#==================================================#\n",
-      "\u001B[1mUsing uniform sampler experimentalist...\u001B[0m\n"
+      "\u001b[1mUsing uniform sampler experimentalist...\u001b[0m\n"
      ]
     },
     {
@@ -1070,8 +1070,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 3:\u001B[0m\n",
-      "\u001B[1mCycle 3 model: sin(x)\u001B[0m\n"
+      "\u001b[1mRunning Cycle 3:\u001b[0m\n",
+      "\u001b[1mCycle 3 model: sin(x)\u001b[0m\n"
      ]
     },
     {
@@ -1097,7 +1097,7 @@
      "text": [
       "\n",
       "#==================================================#\n",
-      "\u001B[1mUsing uniform sampler experimentalist...\u001B[0m\n"
+      "\u001b[1mUsing uniform sampler experimentalist...\u001b[0m\n"
      ]
     },
     {
@@ -1113,8 +1113,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 4:\u001B[0m\n",
-      "\u001B[1mCycle 4 model: sin(x)\u001B[0m\n"
+      "\u001b[1mRunning Cycle 4:\u001b[0m\n",
+      "\u001b[1mCycle 4 model: sin(x)\u001b[0m\n"
      ]
     },
     {
@@ -1198,7 +1198,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 1 with 5 new samples:\u001B[0m\n"
+      "\u001b[1mRunning Cycle 1 with 5 new samples:\u001b[0m\n"
      ]
     },
     {
@@ -1213,7 +1213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[1mCycle 1 model: -0.31\u001B[0m\n"
+      "\u001b[1mCycle 1 model: -0.31\u001b[0m\n"
      ]
     },
     {
@@ -1238,7 +1238,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 2 with 10 new samples:\u001B[0m\n"
+      "\u001b[1mRunning Cycle 2 with 10 new samples:\u001b[0m\n"
      ]
     },
     {
@@ -1253,7 +1253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[1mCycle 2 model: -0.21\u001B[0m\n"
+      "\u001b[1mCycle 2 model: -0.21\u001b[0m\n"
      ]
     },
     {
@@ -1278,7 +1278,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 3 with 20 new samples:\u001B[0m\n"
+      "\u001b[1mRunning Cycle 3 with 20 new samples:\u001b[0m\n"
      ]
     },
     {
@@ -1293,7 +1293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[1mCycle 3 model: sin(x)\u001B[0m\n"
+      "\u001b[1mCycle 3 model: sin(x)\u001b[0m\n"
      ]
     },
     {
@@ -1318,7 +1318,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 4 with 50 new samples:\u001B[0m\n"
+      "\u001b[1mRunning Cycle 4 with 50 new samples:\u001b[0m\n"
      ]
     },
     {
@@ -1333,7 +1333,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[1mCycle 4 model: (x * -0.13)\u001B[0m\n"
+      "\u001b[1mCycle 4 model: (x * -0.13)\u001b[0m\n"
      ]
     },
     {
@@ -1358,7 +1358,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1mRunning Cycle 5 with 100 new samples:\u001B[0m\n"
+      "\u001b[1mRunning Cycle 5 with 100 new samples:\u001b[0m\n"
      ]
     },
     {
@@ -1373,7 +1373,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[1mCycle 5 model: sin(x)\u001B[0m\n"
+      "\u001b[1mCycle 5 model: sin(x)\u001b[0m\n"
      ]
     },
     {
