--- a/docs/tutorials/basic/Tutorial Ia Theorists.ipynb
+++ b/docs/tutorials/basic/Tutorial Ia Theorists.ipynb
@@ -467,7 +467,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "Similar to the polynomial regressor above, we can fit the neural network regressor to the training data."
+   "source": [
+    "Similar to the polynomial regressor above, we can fit the neural network regressor to the training data."
+   ]
   },
   {
    "cell_type": "code",
