--- a/docs/tutorials/basic/Tutorial Ia Theorists.ipynb
+++ b/docs/tutorials/basic/Tutorial Ia Theorists.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Basic Tutorial Ib: Theorists \n",
     "\n",
-    "[Theorists](../../theorist) are classes designed to automate the construction of interpretable models from data. AutoRA theorists are implemented as sklearn regressors and can be used with the `fit` and `predict` methods.\n",
+    "[Theorists](https://autoresearch.github.io/autora/theorist/) are classes designed to automate the construction of interpretable models from data. AutoRA theorists are implemented as sklearn regressors and can be used with the `fit` and `predict` methods.\n",
     "\n",
     "<img src=\"https://autoresearch.github.io/autora/img/theorist.png\" width=\"75%\" alt=\"Theorist Overview\">\n",
     "\n",
