fixed two links

--- a/docs/tutorials/basic/Tutorial Ib Experimentalists.ipynb
+++ b/docs/tutorials/basic/Tutorial Ib Experimentalists.ipynb
@@ -11,9 +11,9 @@
    "source": [
     "# Basic Tutorial Ib: Experimentalists\n",
     "\n",
-    "[Experimentalists](../../experimentalist/) are functions designed to return novel experimental conditions that yield scientific merit.\n",
+    "[Experimentalists](https://autoresearch.github.io/autora/experimentalist/) are functions designed to return novel experimental conditions that yield scientific merit.\n",
     "\n",
-    "![Experimentalist](attachment:experimentalist.png)\n",
+    "![Experimentalist](https://autoresearch.github.io/autora/img/experimentalist.png)\n",
     "\n",
     "Experimentalists may use information about candidate models $M$ obtained from a theorist,\n",
     "experiment conditions that have already been probed $\\vec{x}' \\in X'$, or\n",
