incorporate state logic illustration into workflow tutorial

--- a/docs/tutorials/basic/Tutorial III Functional Workflow.ipynb
+++ b/docs/tutorials/basic/Tutorial III Functional Workflow.ipynb
@@ -261,6 +261,8 @@
     "- `on_state()` for experiment runners and experimentalists\n",
     "- `estimator_on_state()` for theorists (specifically, scikit-learn estimators)\n",
     "\n",
+    "<img src=\"https://autoresearch.github.io/autora/img/state_wrapper.png\" width=\"75%\" alt=\"State Wrapper Overview\">\n",
+    "\n",
     "The first argument for each wrapper should be your corresponding function (i.e., the experiment runner, the experimentalist, and the theorist). The `on_state` wrapper takes a second argument, `output`, to determine where in the state the component is acting on. For the experimentalist this will be `output=[\"conditions\"]`, and for the experiment runner this will be `output=[\"experiment_data\"]`.\n",
     "\n",
     "Once the components are wrapped, their functionality changes to act on the state, meaning that they now expect a state as the first input and will return a modified version of that state."
