incorporate state logic illustration into workflow tutorial

--- a/docs/tutorials/basic/Tutorial III Functional Workflow.ipynb
+++ b/docs/tutorials/basic/Tutorial III Functional Workflow.ipynb
@@ -103,6 +103,8 @@
     "Using the functions and objects in `autora.state`, we can build flexible pipelines and cycles which operate on state\n",
     "objects. State objects represent data from an experiment, like the conditions, observed experiment data and models. The State also includes rules on how to update those data if new data are provided using the \"Delta mechanism\". This state can be acted upon by experimentalists, experiment runners, and theorists. \n",
     "\n",
+    "<img src=\"https://autoresearch.github.io/autora/img/state_logic.png\" width=\"75%\" alt=\"State Logic\">\n",
+    "\n",
     "In tutorial I, we had experimentalists define new conditions, experiment runners collect new observations, and theorists model the data. To do this, we used the output of one as the input of the other, such as: \n",
     "\n",
     "`conditions = experimentalist(...)` $\\rightarrow$ <br>\n",
